[project]
name = "sparkview"
version = "0.2.0"
description = "GB10 Grace Blackwell unified memory GPU monitor"
requires-python = ">=3.10"
dependencies = [
    "nvitop",
    "psutil",
    "rich",
]

authors = [
    { name = "parallelArchitect" },
]

[project.scripts]
sparkview = "sparkview.main:main"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []
